# anki-connect-server

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  TODO  anki_db-wal  anki_wrapper.py  compose.yaml  config.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-build.yml  quality.yml  uv-publish.yml
api/: handlers.py
scripts/: install_tunnel_client.py
src/anki_connect_server/: __init__.py  anki_wrapper.py  api.py  cli.py  config.py  content.py  explore.py  handlers.py  mcp_server.py  review.py  sync.py  tool_metadata.py  tunnel.py  types.py  wrapper.py
tests/: conftest.py  test_anki_wrapper.py  test_api.py  test_config.py  test_content.py  test_edit.py  test_explore.py  test_handlers.py  test_integration.py  test_mcp_metadata.py  test_mcp_server.py  test_review.py  test_sync.py  test_sync_required_2.py  test_sync_server.py  test_tunnel.py
