[project]
name = "anki-connect-server"
version = "0.2.0"
description = "Headless AnkiConnect-compatible REST API server with AnkiWeb sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anki>=26.5",
    "fastapi>=0.139.2",
    "fastmcp>=3.4.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
anki-connect-server = "anki_connect_server.cli:main"

[tool.uv]
package = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=anki_connect_server --cov-report=term-missing --timeout=15"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "C4",
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.ruff.format]
docstring-code-format = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.22",
]
